--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "event",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "type": "module",
   "dependencies": {
     "cloudinary": "^2.5.1",
